# ChangeLog for app-arch/rpm
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.175 2013/05/28 07:50:51 scarabeus Exp $

  28 May 2013; Tomáš Chvátal <scarabeus@gentoo.org> rpm-4.11.0.1.ebuild:
  Use python required use.

*rpm-4.11.0.1 (26 Mar 2013)

  26 Mar 2013; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/rpm-4.11.0-autotools.patch, +rpm-4.11.0.1.ebuild,
  files/rpm-4.8.1-db-path.patch:
  Version bump to latest release.

  15 Feb 2013; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/rpm-4.8.1-autotools.patch, -rpm-4.10.0.ebuild:
  Cleanup older.

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> rpm-4.10.2.ebuild:
  Stable for s390, wrt bug #450286

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> rpm-4.10.2.ebuild:
  Stable for sh, wrt bug #450286

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> rpm-4.10.2.ebuild:
  Stable for sparc, wrt bug #450286

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> rpm-4.10.2.ebuild:
  Stable for ia64, wrt bug #450286

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> rpm-4.10.2.ebuild:
  Stable for arm, wrt bug #450286

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> rpm-4.10.2.ebuild:
  Stable for alpha, wrt bug #450286

  07 Jan 2013; Jeroen Roovers <jer@gentoo.org> rpm-4.10.2.ebuild:
  Stable for HPPA (bug #450286).

  07 Jan 2013; Mike Gilbert <floppym@gentoo.org> rpm-4.10.0.ebuild,
  rpm-4.10.2.ebuild:
  Prevent automake mainainer mode from happening, bugs 365993 and 450448.

  05 Jan 2013; Tomáš Chvátal <scarabeus@gentoo.org> rpm-4.10.2.ebuild:
  Stabilise on amd64 x86 ppc and ppc64 wrt bug#450286.

*rpm-4.10.2 (04 Jan 2013)

  04 Jan 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  -rpm-4.10.1.ebuild, +rpm-4.10.2.ebuild, +files/rpm-4.10.2-autotools.patch:
  Version bump and fix #450286

*rpm-4.10.1 (24 Oct 2012)

  24 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> +rpm-4.10.1.ebuild,
  metadata.xml: