@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX rpm-4.10.2-autotools.patch 1320 SHA256 c491a15aad393b46df6f880d8e493073d81e173e95708dd70581ba1499bcbb63 SHA512 5cdf21c12a96f382927b9ffe58d2c31b8b3feeebf89c6fff83f824d1129e4d82553e01f7d0ee0719dc4ba0136d57bc168423604c54ed2ab397449c73f6b1150a WHIRLPOOL f2f3019e8199484ec92eefe5fe1d6ef5f81e0a99fd539ff8800e30e0f0420243c81607547400c0cdb3c85cfe6d640eb33e32cded4e71c36af8346561ea7fc1f6
 AUX rpm-4.11.0-autotools.patch 503 SHA256 f1020af54fcad6271376ff50e9a2a166e31bb8602401bbbeadb570a82dc8b11d SHA512 fdec043c3db2315aaabd3da91067a8d299ba564eaf53ba6465840352586f0660a5216cfd291b19398a53b2646f4a0b312076e14e56004d8e941d4ae279d54305 WHIRLPOOL 0acf50816eeec2fa4dca4488df83febece25b47b78fd94dcb0264c8e45ecc4b5e5ccd6e7d200dbe66c7737023c408d5549ef1070dcc8c3576eef959616b121d4
 AUX rpm-4.8.1-db-path.patch 628 SHA256 791682c72dd3a24e5e8268bfa967412035aa135c7b8d4673541bed129b89a0f3 SHA512 12539bbeda99d261890d50304945c7f022681ca0a283c70f17a6b1f188e9e24e9ce05b71d541ed6d951f94576b5183c49c4db784d5016d075a859c1e4dcb9005 WHIRLPOOL 96260c3669e3e4521f58e720aa27f365c293d82c85fe26a8a271e069b00e7971231a08b19d390f1282eecbb80aa49ec58a67ca80adef8a2fa95ae410f04cd4d3
@@ -5,6 +8,13 @@ AUX rpm-4.9.1.2-libdir.patch 1056 SHA256 e4beb68b13861ccedcaa0a90c49f42c6dd7a2d7
 DIST rpm-4.10.2.tar.bz2 3545536 SHA256 e9278a2b40f08bae5a9592b9b42f11f88b2e880cc34e57113d53461ed7de6e7b SHA512 7e290e0c0a993a96d575c8c962250f0eac12e11cd678d2f46cb23fbdb1e8dc1b2d63dc4dfa3efe7fa8917d34598a279eaf845331b311f64d02bcc4e93faae266 WHIRLPOOL bdf781030a5760d99950cb7162d2780675b00fe41ecb51b2d9ba22466ce150499489c25fc0a234143403d4d244351afa81828e20fe57bb67cdeaff5f712fbc13
 DIST rpm-4.11.0.1.tar.bz2 3670158 SHA256 98496c0c73095d7c66a8b6f1d8ab00998e1daf4e46a017ae74190c65132ffb21 SHA512 72bd3054b2d0def1e25fba7113eda14def38baef62b558e65cafaf3b374823d0905d982772cffddfd9dc6698eff293251acb2ace7dfda0964085669caa88d535 WHIRLPOOL bf37145cfecb2820b21f3a79c7c28048bf6b1c25500720d4159083b75535cf79075840b8d73e3b5562aab6ad520e384d0fd4e2aff26fb4e212bb863115682afb
 EBUILD rpm-4.10.2.ebuild 2784 SHA256 32bb6b837adc44876ffaf3be99f9ad7a19db73f147c3dddc18e79c4905a4172d SHA512 e527ca794bef66a6447e554ddc460a09b87687e6e300313e4496418b0addbacf29d1827db7891306f63b758817443d66c70dd4dc76c287d1fda9aa0103a39a36 WHIRLPOOL 9b79bdf34b498693aab7d43a5077eeb417657ff022fc6b709a237725d1c240bbdb4955c0568f350f778946e04c94fcc4610588ad490e321601b9ce1f143e7d73
-EBUILD rpm-4.11.0.1.ebuild 2809 SHA256 e7296fc9d40be61325e68aab7ac19af4174e177b07d880c6afc0dc7e1170123a SHA512 f182fd3aaeb61f4a7301607ed6cc0fb045533c0e33a547864100ac1eccf4517bfddd2b333648dee050483077096ba087767c6698a404ceebe676b1967232f9cb WHIRLPOOL cc313923ac1d26056b8c7109d920af0796a9de6685a027b0c3103d456bd388cfc8315e9394f4d9a5b12697d58e1946d44f4bc1de06ee7ad9445a10152cdb0b1c
-MISC ChangeLog 26750 SHA256 da51f24c3a0ef557dc6450285e187ab876214cae5bd7cd462165dfc5186f8853 SHA512 722c5db8d76341b9efc47421fe0661bd163405d1f8bebeb032edf8797327fd7f3b3ab2702b34743172ad14f50fb20c6ca87d3a328895056160e60835af34d804 WHIRLPOOL 0dbe3a98d96cb5a365d3559a8f4911309f370adf858dc240301863b41d4a7c0c47f0dca77abb3a79b66c771ad58b0a08bebbc001aa602dc06276de3521a5d920
+EBUILD rpm-4.11.0.1.ebuild 2802 SHA256 683261fe3aec1a53e60efe5d3700800a742bd106fa063b2e0af8667d8b95f1cb SHA512 d0ba931e209b57bf373c9033bb182ff4bfb98c6e2680dec38aca55b66cb706f228e28ba8fa06a5234f795f177e65839a3470ed3d2891c5d9dbbb4ef83af5a909 WHIRLPOOL 9fc92d0dba954e61d208eb6e6c7ae041eec17e2cb1cc0d7e3a551cb5fea157cd770dae4a3cb3e5369bf2e4ac1a4016f49c09fb2bf7a31be69b8bdb00172f4dd7
+MISC ChangeLog 26846 SHA256 9faa7b317c0227c777b1aaf2bdebc5bcb5c45dc3651d5d895ed035006feda3b0 SHA512 a016cb8cfeca1f2a886d37e245b67cf5b4da38f7388adc6ff20955727a59b3393fc94e51ed3b01fbf4fc0d928872f8540a0a0abaa90ca399e6ba9a83fbb85174 WHIRLPOOL 5d8b2c77198e71567c4cefa434b9dc94cc0f48cfac6bd0c4a873012a57480a933914d8c718ce525549bb7452d71230d4ea14974c23d1848fa03a4ccefcbe67d4
 MISC metadata.xml 258 SHA256 d18cd3c79f172a08970999a154c3ae331f1e6eabe37e677a4491e6ccf5122ab2 SHA512 a35165b524655cb15d343890439b14c3f5eaa998825338a5adc4cff8edad391869c31bc33b4f9bf7bb03a99653684c3f4eb5897b314c0ca1e89defba3f4b9dcf WHIRLPOOL c7d2a308b3d592fc50542eb844e302f214ee6b738b4853332e0a2c034c32cdefd646b5e6c50351e7735ac87f97bf5a5d211d121373a0ace625e564862a62f1ae
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlGk5vcACgkQVWmRsqeSphPh8ACfUEFH8u5i8peVvjF/djdWixoK
+eiQAn35jiwOiVInA3ZlEq7pmmaoZnPSP
+=1rUS
+-----END PGP SIGNATURE-----
