@@ -1,8 +1,9 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX prompt_gentoo_setup-1 745 SHA256 c04da5152712fcd2eb2b83a1967f892f31cc087e1245b28e4806ab5099ac16e7 SHA512 97005a2942af11272662be5b07bfbfaa716838921a669ec1f0e5837b4df3ee226b4be43fe3d1bf663b2c3a0d3aec4101a6f5c62501492d7a3bf1a72cc0642191 WHIRLPOOL 7837760bd0a3b6a2f3ce7c99a96c88768f8ff0d3746acbd70173ae18200272958e835d933226c969475509bfd8e4cb8abfaabbd049ff000f2851298f1808bfe8
 AUX zprofile-1 1767 SHA256 947d4dc9357dac9a1a16ebc7404e686d1a3b31fb1dfed9c3e3eb806d93ccfff8 SHA512 b91712ecb491ae01c58d30b1791257cf2714523dc956d2f59a6875c390157f0492644d0bc00323b84a130e6c0fd73a6f4bd06c38707f31abbe156a2c950a7cd7 WHIRLPOOL 22820e886b459596c8c3149f77d72dfe56ca8a08d134e4c0a96f0b74ea04190d10a38f46bd009f7cf09a606a7b1cbddee9ea4800d382ccaadb96ff11e14f8e39
+AUX zsh-5.0.2-texinfo-5.1.patch 6021 SHA256 c9c1e2e022402ff2fffbcc3fd9fcfe76f5a473e443f88b9c48d5f1948a7dc241 SHA512 f5466f9e0dde5394f1fbfb383f047255c92770bb5f6c87d912e2668d17eaffea09687456b24ce488805328cb9c7e89752d9c6dcf00275af78fa01d03036bb1ed WHIRLPOOL a5491e3df7537f9f200048d4188e41a940814851d48585784615204ae8e6a56f81335ab4ee23be80bf296250d2c75ef472c8e6f344f2d1dbb30e9690df9bb962
 AUX zsh-fix-parameter-modifier-crash.patch 1473 SHA256 b09008bb59eeddad53d18c682155c0eed3b1f19408a04aa7937e00ff9d4f6ce8 SHA512 a59a7de1537a1590f070d82c5c24f56717ffab7b7129dcaa411405b20f01521010f84652cb69a7079ce471c18ae16f62c465121a46b15ea6df0b83543d513332 WHIRLPOOL 1c85779764c34340e598e18d04ca71370d34d7a9c2c67d7a25f2041e996097df7eaf5f62538f7578cbf7c477d3614fbb8e6e3227f10058a3778a72abd8685c2c
 AUX zsh-init.d-gentoo-r1.diff 987 SHA256 2fd1981c9a230c624250d6056aaeb65bc57df8d082abf42f4060260a1c8663f6 SHA512 56ed616177c0167d1819d9749539c035907f4524a3e145b152ca7ac6236c96f0110eb23479794f35fbf86c9ea72286ab832f1a9e3e658b676353bc78e1b06a38 WHIRLPOOL 9680ac95c216d42774f6ebe5f3b28574110e82560c71b0a3dcd4d8ab90f746b3515b0119dda74038b89c457b1d9274e9f14f6923c47c7877ca64938bf24b1983
 DIST zsh-4.3.17-doc.tar.bz2 2719164 SHA256 68f71ba6ba0dc56bfdd93573c7f02dcc3a4f06fd8e24a5f9e17202cf5e68cb91 SHA512 1406ed031d8f95311efb2f1b17e3738aad58fded259cb2655f4cda3a68c9ffb37e48dcbd17ad7d583a8688c33048899cc3793eb30700b43d8a8d56b588f6a789 WHIRLPOOL 976ab384271b6c0fc079f2c149e2e033d3b5f9feb4c673f94c588036a33bcea824bda71697d53bf4779649fcf2be6e44105d1b2949bfba0a95d23ad732dfa29b
@@ -13,24 +14,18 @@ DIST zsh-5.0.2-doc.tar.bz2 2902019 SHA256 99ee08cfc91935af8714bd98db652f016d6c7a
 DIST zsh-5.0.2.tar.bz2 3025767 SHA256 eb220ae5a8076191ec6b4c6a5a2f18122d074a19f25b45f0320b44b8166c5a03 SHA512 096e9fee085bbcb88035984c28cc9d186ae549f9ab09d699f380438b82fcf09b03ac2e9635ddb3cef9d0f287403c10fd29d21ec18f79e8bfab63760db738a07d WHIRLPOOL ff5214ced2cebe50c3fd090a1d12727ee5672875f38fdda5f068ccdd260cc85336bb22fa445d028d6e8df8bdbe53605034e55c3f435cf5a11e981b8ae6821bf0
 EBUILD zsh-4.3.17.ebuild 4939 SHA256 adb69031db2174ac7151c6db7a03bf4fc03a82b06fd6905370371ce980da9d81 SHA512 46ed833fb818da62c6e6c40da75b7bf3d7b90b65d2d8db1cc90c0eac50b08fd292c20c7f38c915f315721cb69709f5fc112d8847d95bd10d193258bfcb3f84af WHIRLPOOL bf5fa5cf60566d380ed57bd5f651bfc7fb3fb6ab7b32d3b9929a10eb08df26aa6ae201b830eeb7c8a904f112f864fa64c33d33f6dc03e657691108c9f4e213fe
 EBUILD zsh-5.0.0.ebuild 4955 SHA256 ec653f7d6d4411a73b6b0d25769e00c77cdcc7d13b3a1381e1cddc45a0fed280 SHA512 5bfe43aa3addd2f771cd3d7ab18f4b844cb0558c06835d836ff8b81b3db9f2bfc0fac2f3bc8f69a07679e9e4c4c6203addd605908d4fbb8521a6f41d3ba110e6 WHIRLPOOL 90756bc87ce186cd72c7852598d92178ad6ef0661806c06c93475546a561485113273f212b62eae54b9ddfda55beb40e5fd066c3654db64dc58a479690bfbd0a
-EBUILD zsh-5.0.2-r1.ebuild 4935 SHA256 3a31e75b9b669a812adc136697f056c6794929ecac9c624acd5da3e8f4b33a26 SHA512 215c714688bbb28276725c0122ae638b60dfbbbea50f749ca60befe5ec8a4b354bfbecb84bb417fc01f1e1cdfc6d42ecce7e40e78a002108f86cc372bc0b0d19 WHIRLPOOL 81dcce9719bce5835a56e7cc08ee662c53f4ad7b71ad8dd6a5b8ae7ab6590a4dd93113f26b664454f2684b4f6eab65cdfa57fc8fc7a4710f06ce36b774e0dbbe
+EBUILD zsh-5.0.2-r1.ebuild 5046 SHA256 0d4848f9e9d418489fbaa844fdf01c4f0139e06ee02c398c4275739e2f6183bb SHA512 b9ef954ae7135bf0d24dd380629044887e8d1575e12bdd5920e26d9bfe3ace720763999748caf176867d84d4810663cbcaa481d748c41215796253993d0c326f WHIRLPOOL e25eb7e18fb08c617659449449eaf220a8f0c15cde58eda95c204ff3f5c91622edbd108fd9356c1704ac8cbd1bf8d6ded67abf4180298e433a78adbae81c626a
 EBUILD zsh-5.0.2.ebuild 4853 SHA256 4a92eeee65d278911d344d65e072d48730ff9cbe4798952fe53a89f55e6f26ff SHA512 2962ec7b748d87fe8fdbc2d08e4360fff54b3610d64328130eb188f7df9bbe9a4ac9da47c15a11296055597d52b71cd0436ab9219ee7e17b9306ce600c2ce539 WHIRLPOOL 904b8945805e19e40975f687b7d98b187134994245d9ff2b672824ea828e8a18c4c69bf3a3925fdf8e1f329d28b2dda6567a4becb81e2b7689094001fa7e7f3e
-MISC ChangeLog 29886 SHA256 dab9d03bbb0bd4173bed16c8f528266f7876accd590fbda071589add5feb9f3c SHA512 0cf45c73bd5bede3e8089353296f121a03860a36a8ccc633509609fb1255b30a2de10056544e722666af395e21068a5e1c69c44ab1bc47d641228e685264b8e5 WHIRLPOOL fc23165c263e196bd286b7e238b1d4b3592233223dc2b97d8863daa176ed7fe0a3b006e064c709c0afea43b1bad8ac8c2dc7887cb71b282034e2d70dc40c85ae
+MISC ChangeLog 30087 SHA256 b4b99952777370ef58230c92415686103784412cdfa9c0f78960576555f7b423 SHA512 a3424ac1ffc8709d5de03f05cbc22b1600f5aa0326ca6ece1dba079433a082203d429e5aabc8c29714218ac3bfed6e20eb35c861deb7b89fd4c874f2a61a3f89 WHIRLPOOL 13a33e00ea43565b9c1ec16311bd307b5f29a3be3acffafc94c65718325e2522a0e9654074000a4535de6c50639a317a444ea250560fae269614c04deb148f95
 MISC metadata.xml 666 SHA256 d64774b35c140959fdff968f4fa294846a7c5a48bfe02247cf5d9fe31df5f11d SHA512 3ba2361a58897750093afca4463bf05453d2c98c25b4937676ee44b01a04392ed388dd52a04fdaec618ac65112c4c54441f7576fb2a7f53e24130d52f51c52d8 WHIRLPOOL c0ba786bee0d04768b758997405af9f7b2be05786c581af6b8e9e2451444b03c1792cfba1e4f8d2ea4db5ee2212b25ef1dc7a432e0796c0610c52d881df0c0ee
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRQyGuAAoJELp701BxlEWfZJYP/3rDvXi5Q/LOnbrU2HfrPzR8
-Y4njOI/HxUsX27wpEkQz4cpDkupmjpGhsEDd4Dgw/VA0ciEVHNq/qy9GwW2rk2mx
-QjW3A5XjhuwmfNso35IrKJ/jC2n2NbbbiNa4VFCI1cN5u9Uh6qxvZQKbzq5iA8J/
-Q+DX+Tefa2L6AghbZayaRyHSLr00fRDuWrQxmCWpG+fzGH6LItSu+ANapjS6bU6d
-+2QUcSGhJcEFMoIl8YO4nsz+HwXq8c9K/xRxWDux/5TT6Y7r4leeAmuHRTZoZMVk
-Bvpj0FYr1ZWX5b3t0aLbG7C0ibu1yau7NyAOFLIim4Kooa5tPsXHWsoPRcQ3s/TT
-f3N+bkzAfmkm2PE+Z9I0q2v3Dkyem6PSfF+bVOeavZ/AO3+iktTbIZfnEuX0jKUG
-I98k8jk+UL/Z3/gV20/HKiGzOoY/YWOqrDvIOUiKRLcQB8WiRMyNXORXIPJ8P2Bm
-8OaiPT6y23JxOlIXqWurO3ypPkxsY7miwHVLKwlFAiQdUFQa/qDEG99FWfWOrl4G
-NhihWrtBXl8LKvLO3j+CmXZFvf2TRwvdXDBzwXqIg4BOgkGwuVd8hCQGDRsL8Ws5
-I/E3v/qVLjWVtaqex262Njlov14Kt6LWBt29FQbt//3AGOgwswvZuzCfHKzqACn6
-ej2mNzbJ+QM9sOyJWrUt
-=Ero/
+iQEcBAEBCAAGBQJRpdfCAAoJEEqz6FtPBkyjAN0H/1ahC5PZTFpG/TKbboXD5SFX
+4M1OnqZVZmgy98LqfTjvPngq2Tc+r7FuOUy+LBKNRuj7M44wBfc+PD14vzzFjasY
+ZsBXmf/UnHgNIljh0898WTF818cmE1Mb3BHni0Cue2CGyP0OqHPg77APeFoAX9p9
+mb/JqjM2eLmdxcji8/KOP6mK6wMa/XT0HIowoA44lMSTM3PBAbn/VxoUvN6M25S/
+gpO6GStrItfHXu27BGKEwJi0EfT5VrLyUp/UzGV30iNClS6ySuK08m4b64VHA6OE
+nAySM+CwVVXX/WJOylr/N8KHZ9UXTCQ0Qj12kak418ZTq6FNs3axOrfhaZlN10w=
+=n8B3
 -----END PGP SIGNATURE-----
