@@ -2,25 +2,27 @@
 Hash: SHA256
 
 DIST geany-1.22.tar.bz2 3198289 SHA256 901a35a7395ef10a80fb10b3ab63bae3871693a4e82d56388e9521a27877577e SHA512 59c411dc8df9f92fd26dc1c4ba65d18c92a2a9e84ae4413153d697ccd90f00d1d437ce63700e3198869dc11dcb8c81920df57a75b5a95cebeb88a364418869cc WHIRLPOOL 8c63308feecf1abb730671c077efc97ee788ac2bed90d0400b7480946eeb9c84e16a3c7b38a46f356eb6f51d68972c8b7b4c0c62b37a3ab95ff003a712a494d0
+DIST geany-1.23.1.tar.bz2 3622524 SHA256 8815b16e59d8679ec359a1a5754fee05e77f7bca53083c939654bfc77d978fad SHA512 e986c35b5fbbc23745d3acda4cddc5de6f273807ffb4da7ff7ea20f108c1f04d763b1207268f06bc45e675d0f0883b309a90dc8e27b8af2f1ec626b557faf015 WHIRLPOOL d777c915738338de7d67578527c63b9da201eefd3322c2118513082b1f109187f6a4900c6ed335e4bd6b2d6472d34ecaff6d1267f43b38827b73026c813e2108
 DIST geany-1.23.tar.bz2 3622917 SHA256 cdd4a772694803c837ae59e56f7bdc2faba174509317211f522e7d25dfcbe8b0 SHA512 d8e8bc10a488bb1b727e55b710eaf01f944d6c16e5ea93d0ef521a5d9fcaecad85c497314fae8478e6912999bb4c39716f25acfb22852e0f1d813aecb16d054f WHIRLPOOL e70f0bbf70de76566137a03289524bd4521707f80610b7f52f76e969136f89bdae9e2c15795db85079e043d089903341f73fc6f028a4e24dab135ccdeb79346e
 EBUILD geany-1.22-r1.ebuild 1543 SHA256 24ee71763bc7606c6eea578c92e9213f4d1ec68f7ca7589a14ed7e652931d563 SHA512 9b8840e58d7215c7dc0bc5229c6788196967750a45e5adbb994b969bda1a5f7f9ae6963721ba9fd1d6cc61f968f53d834d0c92a05f60f50b6e98b3c3a0f32bf9 WHIRLPOOL d9a00dd5b59500ba67bab7f4d10039527fe150f8ec01410fb73c92903499b363e8f7067a0e4475aed670c9f9556fb44a4c6ec37a6b09dfff40b56ea1654a5d95
+EBUILD geany-1.23.1.ebuild 1572 SHA256 2a0d983bb263cfc77f8ec75807b29ae853adc34cd22c76b7ea20b3870e70887f SHA512 7e2f27fe995451d95140d8245e1b140b77b0f8a4bcac6a6d7a99a4112e6013283ce4dd8225fba58dce20e5bb909e2cd544d11cf3e30a6d11289171a54f6716e1 WHIRLPOOL ba0c7e6efffa121e008016d56e61a9826413f76f778f1027f238ea750bd5fef7195e532b2b1d9595d3858867603368ee163be66a991df7ef5ffb6098bffa240d
 EBUILD geany-1.23.ebuild 1570 SHA256 b672c132c7d4161488af0ecfb5ebda11e91cd436229e45d4dbf11fa2ae2eb694 SHA512 02b733de36d7bd736bde72f4fa3eee41163de0f008265c973e09d9349b2369d274c07d96f7a221075d03fcbac9fdbd3658ed88759081eaab7c2f9f8e1268f898 WHIRLPOOL 983e36ba22254b24a1c9c2bfd458243fd3deb093198fc9bb4d1d4a6b42ee93c67e5c126ac0506f5816b3a49c2c425b90e7d124f30d8b685676545695ac4e525d
-MISC ChangeLog 8668 SHA256 b6b066f72e341a5d35f76ced865f13a25162279eed91d1c7827b54fd740dce50 SHA512 7f773b370c3866eb1a021f939993793e11c1f90f0b6a2030b094a3d787447d8a617ded13c81a3c06c1b5cc9eb107549a941989501fb4dae80974ad05da5f977c WHIRLPOOL 4140d133d3114d1eeb1ded8bc6e6f3cbc34492e69cdf19abd980124df2b820e6671717bb5374eedde5d5c5e4a8892c559e6f4099c7559568680cc1a7145622cd
+MISC ChangeLog 8803 SHA256 40153a96b638dadebd6881b4beb88cbdef407bd8b18252d98058ac2590e1f79a SHA512 6c2cafd02ef8556e7febe33f9f8ddda026861909cd52abc81823f0e28d95d174d255e6c717a9ed7265126245d5c69569c48b9a0ebe8d4cf055afe6c10efb9d4d WHIRLPOOL 1b26596d1ad564ffa0e00c9980e7a8078dbc5dd91b5555fbb76a5ba42c68d54cd012bc94781ebca407a85e999755a8fd7f4aca3366e6c93fbbd7a4c7abaa4b3a
 MISC metadata.xml 1922 SHA256 2a7ea9ffd1605dbce99497564a98bbb49d20c2d62f11fed8c1d39ce7988645d4 SHA512 8d54c284469f12733610b66947c75e055bb46f41213573ce811e8fd2d48b3a90e822c753118d0a213e0f1262dd513681dede592fd27ef814b6455725ab186e57 WHIRLPOOL 041975002890b1fd0d28adb1823ec38da865efbd307666777fb1839c5e9f82d465c497f8e846845fa692cacff221e6eb0eb53083c0b8867fefb7e3d23d5e1441
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRPdTNAAoJEPiazRVxLXTF/C0QANU1lkNlLp80SfzQQO5PdZ1r
-vlQI7yu39vcFmpuaZuV4WzaN8q0R/zGHd4JwUMUy+zDoffXMARUyOjlk93+gX2Om
-R2DLV7CLEMgJaPVTnbqsPefQ7ltjERIGNT654pJX+9rlFkzlzIcw+C/RG+UymAKN
-OUMwS2cbDbJ9+RdAYOkzu/tGnitj4kF94TpU+5Ty35T05EBuRUlb00cm4PEfbpYG
-7lZs+mOSz3cPgN5SwnUWKIOkBZ3Arn57K14aNX4Mlap094AZW518YWyJJqnQLuBB
-gUDTMJPlv5HXbSD9po+xc5sFj7Tbl+9PdTeb3JS+py+Ial//1Ieq4lO7k38ojV10
-xJxohfq+3YOqygWtIqGzOS7RkXlwpKA609QHi5HCULCnmDIfuFSrRP6cC7kORkEh
-f4TnanGJjRs0NK+goIkGT2aU9+OWQCfllipmER15UkgaVx7KRfQh+jc1x+acrMNZ
-bAQTuXIxmO140kyM5DCsWaFAGTYxK1//yCNcyo8SM7oPRlIrSdQQmtcoV80JmAf+
-HpKJ/FQ7EEinlt780x4i7Ov41ZSxiaN8s0M+UhFCV//AY3dgVMe4wPs+qEfbEpOg
-a/TEEt/LiPUFjQdzeSj3M1lNa9qQeKj3yh9GdAnmqR9D2hsU8VlgIXAUk2KV+u/t
-FCy13yaXN/amAE0nIdOJ
-=Rl4s
+iQIcBAEBCAAGBQJRpMiUAAoJEPiazRVxLXTFxhcP/RIC6sg0Z/NjKExaweBwxSK2
+VkYHSneDRQLiA0HSNNLH88C2XUNIoBIndLvjX8gxHRdtU6TNVhAtQcnlskekFkEx
+sxu7OagNGOwDtmemULGAcS0UWGCSQMK4yytKpUOhFgBukmqwsA7kYeufmROB+Rt2
+tg/+Iyklt48x/wP6Vo0rOwjeeTi1VuAVSkoq0zU6VBe+TE3B3BAGJ3/iLugOu37M
+ZuQQn+3V1c1hmvEqKOVRDpNPiwkkCawZatLP1sgqdE3D+Rk6NExOr73HVZRsP9xi
+gjGurXwgMw+5jQ3xFZd2RMCBiiA0KzfGfhkRpNczx506VaI3BeCzUk7UuIC1D/hc
+etR//HnMWjluUPGXAlBv0k7RKwzF/EbthYXXGo5NOKHr9+bgwvju2u37XH4F5baf
+3LRw7bWsaPA5xjKk/8eyskTS9aSTBAm549ymflUmkHFgmmkdHHVt6pU2zLEAKxK7
+3KtNIjJ0nvxI2Lg3Zu5Uq6MVze0cg53tI5K9f7+M6023It4pojDAguc8JleE0amY
+Oc7RFhrdBih2w/BzGMoVzxOGsJZtlOrtQNnm0dlfYrjixGvAbCiSV7tCEsApNd77
+BV3wJf2K6UkeyfjiIgEjTvZiciZHPkIeYtdaiSKST+6Y3Rle+JVwTSSgp9Za4hXj
+F8J+wHKlO3YTWNmOF4Ic
+=eayg
 -----END PGP SIGNATURE-----
