@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/geany
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/geany/ChangeLog,v 1.67 2013/03/11 12:57:48 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/geany/ChangeLog,v 1.68 2013/05/28 15:09:06 polynomial-c Exp $
+
+*geany-1.23.1 (28 May 2013)
+
+  28 May 2013; Lars Wendler <polynomial-c@gentoo.org> +geany-1.23.1.ebuild:
+  Version bump (bug #471494)
 
   11 Mar 2013; Lars Wendler <polynomial-c@gentoo.org> geany-1.23.ebuild:
   Updatet list of locales.
