@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/rpm
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.175 2013/05/28 07:50:51 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.176 2013/05/28 17:18:46 jer Exp $
+
+  28 May 2013; Jeroen Roovers <jer@gentoo.org> rpm-4.11.0.1.ebuild:
+  Stable for HPPA (bug #471456).
 
   28 May 2013; Tomáš Chvátal <scarabeus@gentoo.org> rpm-4.11.0.1.ebuild:
   Use python required use.
